[gd_scene load_steps=8 format=2]

[ext_resource path="res://themes/background.theme" type="Theme" id=1]
[ext_resource path="res://themes/main.theme" type="Theme" id=2]
[ext_resource path="res://themes/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ui/menu_game.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/Button.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -214.0
margin_top = -85.5159
margin_right = 214.0
margin_bottom = 292.484
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 428.0
margin_bottom = 378.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 424.0
margin_bottom = 373.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 420.0
margin_bottom = 70.0

[node name="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Title" index="0"]
margin_right = 416.0
margin_bottom = 66.0

[node name="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Title/PanelContainer" index="0"]
margin_right = 406.0
margin_bottom = 56.0

[node name="Resume" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 420.0
margin_bottom = 143.0

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Resume" index="0"]
margin_right = 416.0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Settings" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 147.0
margin_right = 420.0
margin_bottom = 216.0

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Settings" index="0"]
margin_right = 416.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Exit" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 420.0
margin_bottom = 289.0

[node name="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Exit" index="0"]
margin_right = 416.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume/Button" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings/Button" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit/Button" to="." method="_on_ExitButton_pressed"]

[editable path="PanelContainer/MarginContainer/VBoxContainer/Title"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/Resume"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/Settings"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/Exit"]
